# filmify

./: main.py  pyproject.toml
src/configs/: datasets.py  logger.py
src/core/: preprocessing.py  recommender.py
