[project]
name = "filmify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "ipykernel>=6.30.1",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "scikit-surprise>=1.1.4",
]
